--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>BMI calculator</title>
 </head>
 <body>
+    <main>
+        <div class="Calculator">
+            <div class="height">
+                <label for="height"> Height:
+                    <input type="number">
+                </label>
+            </div>
+            <br>
+            <div class="weight">
+                <label for="weight"> Weight:
+                    <input type="number">
+                </label>
+            </div>
+            <br>
+            <button type="submit">Calculate</button>
+        </div>
+    </main>
     
 </body>
 </html>
