--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body>
     <main>
-        <div class="Calculator">
+        <div class="container">
+            <h2>BMI CALCULATOR</h2>
+            <input type="text" id="result" readonly><br><br>
             <div class="height">
-                <label for="height"> Height:
-                    <input type="number">
-                </label>
+                <label for="height"> Height: </label>
+                <input type="number" id="height">
+                
             </div>
             <br>
             <div class="weight">
-                <label for="weight"> Weight:
-                    <input type="number">
-                </label>
+                <label for="weight"> Weight: </label>
+                <input type="number" id="weight">
             </div>
             <br>
-            <button type="submit">Calculate</button>
+            <button onclick="calculate()">Calculate</button>
         </div>
     </main>
     
