bmi calculation done

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="indexStyle.css">
     <title>BMI calculator</title>
 </head>
 <body>
     <main>
         <div class="container">
             <h2>BMI CALCULATOR</h2>
-            <input type="text" id="result" readonly><br><br>
+            <p id="result"></p>
+            <p id="category"></p><br>
             <div class="height">
                 <label for="height"> Height: </label>
                 <input type="number" id="height">
@@ -25,6 +27,6 @@
             <button onclick="calculate()">Calculate</button>
         </div>
     </main>
-    
+    <script src="./BMI.js"></script>
 </body>
 </html>
