--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
             <p id="result"></p>
             <p id="category"></p><br>
             <div class="height">
-                <label for="height"> Height: </label>
-                <input type="number" id="height">
-                
+                <label for="height"> Height (cm) : </label>
+                <input type="number" id="height">                
             </div>
             <br>
             <div class="weight">
-                <label for="weight"> Weight: </label>
+                <label for="weight"> Weight (kg) : </label>
                 <input type="number" id="weight">
             </div>
             <br>
