--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <input type="number" id="weight">
             </div>
             <br>
-            <button onclick="calculate()">Calculate</button>
+            <div>
+                <button onclick="calculate()">Calculate</button>
+                <button onclick="clean()">Clear</button>
+            </div>
         </div>
     </main>
     <script src="./BMI.js"></script>
